--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,11 @@
-#gameCanvas {
-    border: 2px solid black;
+body {
+    margin: 0;
+    padding: 0;
+  }
+  
+  canvas {
     display: block;
-    margin: 0 auto;
-    background-color: rgb(243, 250, 215);
-}
-
+    width: 100%;
+    height: 100%;
+  }
+  
