--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,56 +1,118 @@
+* {
+  margin: 0;
+  padding: 0;
 
-  #game-container {
-    margin: auto;
-    width: 1000px;
-    height: 400px;
-    border: 1px solid #ccc;
-    position: relative;
+}
+
+body {
+  background-image: url("/assets/images/rugby.jpg");
+  background-size: 88%;
+  background-repeat: repeat;
+  font-family: 'Roboto', sans-serif;
+}
+
+#game-container {
+  background-image: url("/assets/images/background.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  margin: auto;
+  width: 1000px;
+  height: 400px;
+  border: 1px solid #ccc;
+  position: relative;
 }
 
 #trex {
-    height: 120px;
-    position: absolute;
-    bottom: 0;
-    left: 50px;
+  height: 120px;
+  position: absolute;
+  bottom: 0;
+  left: 50px;
 }
+
 
 .cactus {
-    width: 20px;
-    height: 40px;
-    position: absolute;
-    bottom: 0;
-    background-color: green;
+  width: 20px;
+  height: 40px;
+  position: absolute;
+  top: 84%;
 }
 
+.gameOverMsg {
+  margin-bottom: 2%;
+}
+
+.score {
+  color: rgb(88, 237, 88);
+}
+
+.topScore {
+  font-weight: 400;
+}
+
+.topScoreNumber {
+  font-weight: 800;
+}
+
+.btn {
+  padding: 8px;
+  border-radius: 10px;
+  border: none;
+}
+
+.btn:hover {
+  cursor: pointer;
+}
+
+.instructions {
+  margin-top: 0.5%;
+  display: flex;
+  justify-content: center;
+}
+
+.instructions h4 {
+  margin-top: 0.7%;
+  font-size: 25px;
+  -webkit-text-stroke: 1px rgb(27, 25, 25); /* width and color */
+  font-family: Roboto, sans-serif; color: white;
+}
+
+.spacebar {
+width: 6%;
+height: 54px;
+margin-top: 4px;
+margin-right: 15px;
+}
+
+
 #score-container {
-    font-size: 24px;
-    text-align: center;
-    width: 100%;
-    position: absolute;
-    top: 10px;
-    left: 0;
+  font-size: 24px;
+  text-align: center;
+  width: 100%;
+  position: absolute;
+  top: 10px;
+  left: 0;
 }
 
 #game-over {
-    font-size: 36px;
-    text-align: center;
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    background-color: rgba(0, 0, 0, 0.5);
-    color: white;
-    display: none;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    z-index: 999;
+  font-size: 36px;
+  text-align: center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: white;
+  display: none;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  z-index: 999;
 }
 
 #game-over button {
-    font-size: 24px;
-    margin-top: 20px;
+  font-size: 24px;
+  margin-top: 20px;
 }
 
 /* Styles spécifiques à l'écran de début */
